# CADTestBench

./: .gitignore  README.md  pyproject.toml
baselines/Claude-4.6-Sonnet/Abstract/generated_models/00000007/: prompt.txt
baselines/Claude-4.6-Sonnet/Abstract/generated_models/00000633/: prompt.txt
baselines/Claude-4.6-Sonnet/Abstract/generated_models/00000960/: gpt_generated.py  prompt.txt
baselines/Claude-4.6-Sonnet/Abstract/generated_models/00001411/: gpt_generated.py
baselines/Claude-4.6-Sonnet/Abstract/generated_models/00001615/: gpt_generated.py
baselines/Claude-4.6-Sonnet/Abstract/generated_models/00001977/: prompt.txt
baselines/Claude-4.6-Sonnet/Abstract/generated_models/00002221/: gpt_generated.py
baselines/Claude-4.6-Sonnet/Abstract/generated_models/00003763/: prompt.txt
baselines/Claude-4.6-Sonnet/Abstract/generated_models/00003801/: gpt_generated.py
baselines/Claude-4.6-Sonnet/Abstract/generated_models/00004495/: gpt_generated.py  prompt.txt
baselines/Claude-4.6-Sonnet/Abstract/generated_models/00004935/: gpt_generated.py  prompt.txt
baselines/Claude-4.6-Sonnet/Abstract/generated_models/00005161/: gpt_generated.py
baselines/Claude-4.6-Sonnet/Abstract/generated_models/00005358/: gpt_generated.py
baselines/Claude-4.6-Sonnet/Abstract/generated_models/00005721/: gpt_generated.py
src/cadtestbench/: __init__.py  __main__.py  cli.py  constants.py  data_source.py  runner.py
src/cadtestbench/loaders/: __init__.py  cadtestbench_loader.py
src/cadtestbench/metrics/: __init__.py  cadtest.py  interface.py
(+1183 files in other folders)
